<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|start"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lesson_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textFilter"
                android:nextFocusDown="@+id/eroom"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lesson_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789:-"
                android:hint="@string/time"
                android:inputType="numberSigned|textFilter"
                android:nextFocusDown="@+id/ename"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|end"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lesson_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|end">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room"
                android:inputType="textFilter"
                android:nextFocusDown="@+id/etime"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="@string/remove" />

            <Button
                android:id="@+id/move"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center|end"
                android:text="@string/move" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>